--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                 <div class="col-md-6">
                   <div class="intro-img">
                     <img
-                      src="http://mochimart.vn/uploads/plugin/custom_img/2022-05-18/1652864441-819055131-custom.jpg"
+                      src="./images/slide3.jpg"
                     />
                   </div>
                 </div>
